src/objects/Account/fields/Last_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Won_Opportunity__c</fullName>
    <description>Gives the date of the last Opportunity that was won or the last ONC Opportunity.</description>
    <label>Last Won Opportunity</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed via PO, ONC</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>