src/objects/Account/fields/Latest_Laser_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Laser_Update__c</fullName>
    <description>Most-recent save date on any Equipment Owned object under this Account</description>
    <label>Latest Laser Update</label>
    <summarizedField>Equipment_Owned__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>