src/objects/Account/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <description>Concatenated value of Oracle Party Id and Oracle Account ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenated value of Oracle Party Id and Oracle Account ID.</inlineHelpText>
    <label>Legacy Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>