src/objects/Account/fields/Legacy_Salesforce_Org__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salesforce_Org__c</fullName>
    <label>Legacy Salesforce Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marlow</fullName>
            </value>
            <value>
                <fullName>Corp II-VI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>