src/objects/Account/fields/Legacy_Salesforce_System__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salesforce_System__c</fullName>
    <label>Legacy Salesforce System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marlow</fullName>
            </value>
            <value>
                <fullName>II-VI Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>