src/objects/Account/fields/Load_From_Glovia__c.field-meta.xml
<CustomField>
    <fullName>Load_From_Glovia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load From Glovia</label>
    <type>Checkbox</type>
</CustomField>