src/objects/Account/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <label>Location Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>