src/objects/Account/fields/Mazak_Cin_Lasers__c.field-meta.xml
<CustomField>
    <fullName>Mazak_Cin_Lasers__c</fullName>
    <description>Roll-up of In Use Mazak and Cincinnati Lasers</description>
    <label># Mazak Cin Lasers</label>
    <summaryFilterItems>
        <field>Equipment_Owned__c.System__c</field>
        <operation>equals</operation>
        <value>CINCINNATI, MAZAK</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Equipment_Owned__c.Laser_Status__c</field>
        <operation>equals</operation>
        <value>In Use</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>