src/objects/Account/fields/Negotiated_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Exchange_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Negotiated Exchange Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>