src/objects/Account/fields/oneTimeBatchFlag__c.field-meta.xml
<CustomField>
    <fullName>oneTimeBatchFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>oneTimeBatchFlag</label>
    <type>Checkbox</type>
</CustomField>