src/objects/Account/fields/Opportunities_Business_Unit_s__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Business_Unit_s__c</fullName>
    <description>Created for territory management.</description>
    <label>Opportunities&apos; Business Unit(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>