src/objects/Account/fields/Oracle_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_Id__c</fullName>
    <label>Oracle Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>