src/objects/Account/fields/Oracle_Description__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Description__c</fullName>
    <label>Oracle Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>