src/objects/Account/fields/Oracle_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Party_Id__c</fullName>
    <label>Oracle Party Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>