src/objects/Account/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <label>Org ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>