src/objects/Account/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <description>Business Unit Name of Oracle</description>
    <label>Org Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>