src/objects/Account/fields/Parent_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Parent_Price_List__c</fullName>
    <formula>IF(   ISBLANK(Price_List__c) ,  Parent.Price_List__c , Price_List__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Price List</label>
    <type>Text</type>
</CustomField>