src/objects/Account/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <formula>Parent.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record Type</label>
    <type>Text</type>
</CustomField>