src/objects/Account/fields/Party_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_Number__c</fullName>
    <label>Party Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>