src/objects/Account/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <length>240</length>
    <type>Text</type>
</CustomField>