src/objects/Account/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>RSM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>RSM</relationshipName>
    <type>Lookup</type>
</CustomField>