src/objects/Account/fields/RSM_Email__c.field-meta.xml
<CustomField>
    <fullName>RSM_Email__c</fullName>
    <formula>RSM__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Email</label>
    <type>Text</type>
</CustomField>