src/objects/Account/fields/Sales_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Code__c</fullName>
    <label>Sales Channel Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>