src/objects/Account/fields/Sales_Channel_Display_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Display_Code__c</fullName>
    <label>Sales Channel Display Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>