src/objects/Account/fields/Sales_Rep_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Full_Name__c</fullName>
    <label>Sales Rep Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>