src/objects/Account/fields/Sales_Tax_Required__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Required__c</fullName>
    <label>Sales Tax Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>