src/objects/Account/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <description>From Glovia</description>
    <inlineHelpText>Market Segment from Glovia</inlineHelpText>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10CH - DSP CHINA</fullName>
            </value>
            <value>
                <fullName>10 - DSP</fullName>
            </value>
            <value>
                <fullName>10G - DSP GERMANY</fullName>
            </value>
            <value>
                <fullName>10JP - DSP II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>10VN - DSP DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>15CH - INDUSTRIAL CHINA</fullName>
            </value>
            <value>
                <fullName>15G - INDUSTRIAL GERMANY</fullName>
            </value>
            <value>
                <fullName>15 - INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>15JP - INDUSTRIAL II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>15VN - INDUSTRIAL DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>20CH - TELECOM CHINA</fullName>
            </value>
            <value>
                <fullName>20G - TELECOM GERMANY</fullName>
            </value>
            <value>
                <fullName>20JP - TELECOM II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>20 - TELECOM</fullName>
            </value>
            <value>
                <fullName>20VN - TELECOM DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>25 - AUTOMOTIVE</fullName>
            </value>
            <value>
                <fullName>25CH - AUTOMOTIVE CHINA</fullName>
            </value>
            <value>
                <fullName>25G - AUTOMOTIVE GERMANY</fullName>
            </value>
            <value>
                <fullName>25JP - AUTOMOTIVE II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>25VN - AUTOMOTIVE DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>30CH - MEDICAL CHINA</fullName>
            </value>
            <value>
                <fullName>30G - MEDICAL GERMANY</fullName>
            </value>
            <value>
                <fullName>30JP - MEDICAL II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>30 - MEDICAL</fullName>
            </value>
            <value>
                <fullName>30VN - MEDICAL DIRECT SHIP FROM VIETNAM</fullName>
            </value>
            <value>
                <fullName>35CH - CONSUMER CHINA</fullName>
            </value>
            <value>
                <fullName>35 - CONSUMER</fullName>
            </value>
            <value>
                <fullName>35G - CONSUMER GERMANY</fullName>
            </value>
            <value>
                <fullName>35JP - CONSUMER II-VI JAPAN SALES</fullName>
            </value>
            <value>
                <fullName>35VN - CONSUMER DIRECT SHIP FROM VIETNAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>