src/objects/Account/fields/Salesforce_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Salesforce Legacy Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>