src/objects/Account/fields/SAP_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_ID__c</fullName>
    <description>Unique SAP Customer ID used for interface</description>
    <externalId>true</externalId>
    <label>SAP Customer ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>