src/objects/Account/fields/Segmantation__c.field-meta.xml
<CustomField>
    <fullName>Segmantation__c</fullName>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small: &lt;$100M</fullName>
            </value>
            <value>
                <fullName>Medium: $100M-$500M</fullName>
            </value>
            <value>
                <fullName>Large: $500M-$10B</fullName>
            </value>
            <value>
                <fullName>Very Large: &gt;$10B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>