src/objects/Account/fields/Shadow_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Account_Name__c</fullName>
    <label>Shadow Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>