src/objects/Account/fields/Ship_Territory__c.field-meta.xml
<CustomField>
    <fullName>Ship_Territory__c</fullName>
    <description>Territory that the product will ship ... pulls from glovia Buy location.  Sales Territory Code</description>
    <inlineHelpText>Field advises the territory that parts will be shipped.</inlineHelpText>
    <label>Ship Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MIA</fullName>
            </value>
            <value>
                <fullName>MIC</fullName>
            </value>
            <value>
                <fullName>MIE</fullName>
            </value>
            <value>
                <fullName>MIJ</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>MIT</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>WC</fullName>
            </value>
            <value>
                <fullName>WC2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>