src/objects/Account/fields/Ship_to_Location_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Location_Name_Address__c</fullName>
    <label>Ship to Location Name/Address</label>
    <type>TextArea</type>
</CustomField>