src/objects/Account/fields/Shipping_Region__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region__c</fullName>
    <label>Shipping Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>