src/objects/Account/fields/Site_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Use_Code__c</fullName>
    <label>Site Use Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>