src/objects/Account/fields/Site_Use_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Use_Id__c</fullName>
    <label>Site Use Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>