src/objects/Account/fields/Site_Use_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Use_Status__c</fullName>
    <label>Site Use Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>