src/objects/Account/fields/Sum_of_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Expected_Revenue__c</fullName>
    <inlineHelpText>Expected Revenue from Backlog</inlineHelpText>
    <label>Expected Revenue from Backlog</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Open - Discussion, Open - Sample Shipped, Open - Part Qualified</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>