src/objects/Account/fields/Sum_of_Open_Opp_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Open_Opp_Amounts__c</fullName>
    <description>Calculates sum of child Opportunity.Amount field using Roll-Up Helper app. Condition: Closed = FALSE and Current FY? = TRUE.</description>
    <inlineHelpText>SUM of open opps in current FY</inlineHelpText>
    <label>Sum of Open Opp (Current FY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>