src/objects/Account/fields/Sum_of_Opty_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Opty_Revenue_Amount__c</fullName>
    <inlineHelpText>Sum of Opportunities - Amount</inlineHelpText>
    <label>Sum of Opty Revenue Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>