src/objects/Account/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <label>Surcharge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge Surcharge</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>