src/objects/Account/fields/TAX_Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>TAX_Payer_Id__c</fullName>
    <label>TAX Payer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>