src/objects/Account/fields/Top_Customer_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Top_Customer_Warranty__c</fullName>
    <formula>Parent.Customer_Warranty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Warranty</label>
    <type>Text</type>
</CustomField>