src/objects/Account/fields/Total_Next_12_Months_Revenue_of_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Total_Next_12_Months_Revenue_of_Oppty__c</fullName>
    <inlineHelpText>Next 12 Months Revenue from Open Opportunities</inlineHelpText>
    <label>Next 12 Months Revenue from Open Oppty</label>
    <summarizedField>Opportunity.Next_12_Months_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Open - Discussion, Open - Sample Shipped, Open - Part Qualified</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>