src/objects/Account/fields/Trumpf_Lasers__c.field-meta.xml
<CustomField>
    <fullName>Trumpf_Lasers__c</fullName>
    <description>Count of Active Trumpf Lasers</description>
    <inlineHelpText>Count of In Use, Idle, and Spare Trumpf Lasers</inlineHelpText>
    <label># Trumpf Lasers</label>
    <summaryFilterItems>
        <field>Equipment_Owned__c.System__c</field>
        <operation>equals</operation>
        <value>TRUMPF</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Equipment_Owned__c.Laser_Status__c</field>
        <operation>equals</operation>
        <value>In Use, Idle, Spare</value>
    </summaryFilterItems>
    <summaryForeignKey>Equipment_Owned__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>