src/objects/Account/fields/UltimateParent__c.field-meta.xml
<CustomField>
    <fullName>UltimateParent__c</fullName>
    <formula>IF( ISBLANK(ParentId) ,Id ,
 

IF( ISBLANK( Parent.Parent.Id ) , Parent.Id ,
 

IF( ISBLANK( Parent.Parent.Parent.Id ) , Parent.Parent.Id,
 

IF( ISBLANK( Parent.Parent.Parent.Parent.Id ) , Parent.Parent.Parent.Id, Parent.Parent.Parent.Parent.Id
 

)
 

)
 

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UltimateParent</label>
    <type>Text</type>
</CustomField>