src/objects/Account/fields/UltimateParent_Test__c.field-meta.xml
<CustomField>
    <fullName>UltimateParent_Test__c</fullName>
    <formula>IF( LEN( Parent.Name )&lt; 1 , HYPERLINK(&quot;/&quot;&amp;Global_Ultimate_Parent__r.Id, Global_Ultimate_Parent__r.Name ,&quot;_Parent&quot;) , IF( LEN( Parent.Parent.Name )&lt; 1 , HYPERLINK(&quot;/&quot;&amp;Parent.Global_Ultimate_Parent__r.Id,Parent.Global_Ultimate_Parent__r.Name ,&quot;_Parent&quot;) ,  IF( LEN( Parent.Parent.Parent.Name )&lt; 1 , HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Global_Ultimate_Parent__r.Id,Parent.Parent.Global_Ultimate_Parent__r.Name ,&quot;_Parent&quot;) ,IF( LEN( Parent.Parent.Parent.Parent.Name )&lt; 1 , HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Global_Ultimate_Parent__r.Id,Parent.Parent.Parent.Global_Ultimate_Parent__r.Name ,&quot;_Parent&quot;) ,IF( LEN( Parent.Parent.Parent.Parent.Parent.Name )&lt; 1 , HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Global_Ultimate_Parent__r.Id,Parent.Parent.Parent.Parent.Global_Ultimate_Parent__r.Name ,&quot;_Parent&quot;) ,IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt; 1 , HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Global_Ultimate_Parent__r.Id,Parent.Parent.Parent.Parent.Parent.Global_Ultimate_Parent__r.Name ,&quot;_Parent&quot;) ,&apos;&apos;))) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UltimateParent Test</label>
    <type>Text</type>
</CustomField>